tdf#167082 Fix the missing style

While we tracking change of the document, if action is delete and if it
doesn't delete the whole node, we shoud use remaining text parts's
style. If delete removes whole node we can use previous node' style.

Signed-off-by: Gülşah Köse <gulsah.kose@collabora.com>
Change-Id: Ie5cc40c12b9e2dad521ee35098630c94048d490f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187120
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>